# web-agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
agent/: __init__.py  action_selector.py  agent_controller.py  browser_tools.py  config.py  exceptions.py  executor.py  llm_client.py  observer.py  planner.py  privacy.py  prompts.py  tracer.py  types.py  verifier.py  vision.py
eval/: __init__.py  ablation_report.md  eval_core.py  run_ablation.py  run_eval.py
eval/artifacts/: .gitkeep
eval/artifacts/2026-07-21-local-public/: provenance.json  results.json  summary.md
eval/artifacts/20260723-local-public/: provenance.json  results.json  summary.md
eval/artifacts/ablation-20260721/: ablation_results.json  summary.md
eval/artifacts/ablation-20260723/: ablation_results.json  summary.md
eval/cases/: verify_mode_audit.md
eval/cases/local/: L01.json  L02.json  L03.json  L04.json  L05.json  L06.json  L07.json  L08.json  L09.json  (+2 more)
eval/pages/: accordion.html  disabled_btn.html  dynamic_noise.html  form_fill.html  links_page.html  redirect.html  redirect_target.html  sensitive_field.html  tab_nav.html  table_extract.html  text_find.html
tests/: test_action_selector.py  test_agent_controller.py  test_browser_tools.py  test_config.py  test_eval_core.py  test_exceptions.py  test_executor.py  test_llm_client.py  test_observer.py  test_planner.py  test_run_ablation.py  test_run_eval.py  test_tracer.py  test_verifier.py  test_vision.py
tests/integration/: __init__.py  conftest.py  test_local_browser_flow.py
(+17 files in other folders)
